@startuml
!define DARKBLUE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml
'https://plantuml.com/class-diagram

class ListApp {
    main(String[] args)
    start(Stage primaryStage)
}

class ListAppController {
    - TableView<Item> listOfItems
    - DatePicker dueDatePicker
    - TextField itemDescriptionField
    - ObservableList<Item> list

    # clearAllButtonClicked()
    # createNewItemButtonClicked()
    # helpButtonClicked()
    # openButtonClicked()
    # saveAsButtonClicked()
    # showAllButtonClicked()
    # showAllButtonClicked()
    # showOnlyCompletedButtonClicked()
    # showOnlyIncompleteButtonClicked()
    # DeleteButtonClicked()
    - refresh()
    + initialize()
}

class Item {
    - String description
    - String dueDate
    - CheckBox completed

    + Item(String dueDate, String description)
    + String getDescription()
    + void setDescription(String description)
    + String getDueDate()
    + void setDueDate(String dueDate)
    + CheckBox isCompleted()
    + void setCompleted(CheckBox completed)

}

Application <|-- ListApp
ListApp -- ListAppController
ListAppController --* Item
@enduml